--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,12 @@ body {
 
 .game-container {
   padding: 10px;
-  min-height: 50vh;
   width: 80%;
   max-width: 600px;
   background-color: #ffffff;
   border: 2px solid #333;
   border-radius: 12px;
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
-  box-sizing: border-box;
   text-align: center;
 }
 
@@ -42,28 +40,21 @@ p {
   color: white;
 }
 
-.button:hover {
-  transform: scale(1);
-  color: red;
-}
-
 .button {
   border: none;
-  outline: none;
+  background-color: transparent;
   font-family: "Patrick Hand";
   font-size: 35px;
   width: 48px;
   height: 42px;
-  background-color: transparent;
-  cursor: pointer;
   color: rgb(46, 44, 39);
   position: relative;
 }
 
 .button.wrong::after {
+  position: absolute;
   content: "X";
   color: red;
-  position: absolute;
   opacity: 0.9;
   font-size: 40px;
   width: 35px;
@@ -73,15 +64,21 @@ p {
 }
 
 .button.correct::after {
+  position: absolute;
   content: "";
   display: flex;
-  position: absolute;
   border: 2px solid blue;
   border-radius: 50%;
   width: 35px;
   height: 35px;
   top: 5px;
   left: 5px;
+}
+
+.button:hover {
+  transform: scale(1.3);
+  color: red;
+  cursor: pointer;
 }
 
 .hint-box {
@@ -92,15 +89,13 @@ p {
   letter-spacing: 1px;
 }
 
-#displayed-word {
+#guessing-word {
   font-size: 49px;
   letter-spacing: 5px;
   color: #333;
   font-weight: bold;
   height: 75px;
 }
-
-
 
 #game-message {
   font-size: 35px;
@@ -125,6 +120,12 @@ p {
   font-weight: bold;
 }
 
-#guess-checker{
+#guess-checker {
   font-size: 31px;
+}
+
+.start-content {
+  display: flex;
+  flex-direction: column;
+  padding: 90px;
 }
